Gitignore update. Fix hr spacing.

--- a/e2e/pages/app/badge/badge.testpage.component.less
+++ b/e2e/pages/app/badge/badge.testpage.component.less
@@ -16,3 +16,7 @@
         padding: 0;
     }
 }
+
+hr {
+    margin: 1em 0;
+}
